# reusing-intent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  asset-manifest.json  demo.ipynb  deploy.sh  docker-compose.prod.yml  docker-compose.yml  environment.env  index.html  intent-env.yml  lint-staged.config.js  package-lock.json  package.json  pyproject.toml  reusing-intent.code-workspace  run.py  setup.cfg
.github/workflows/: build.yml  test.yml
.nginx/: nginx.conf  nginx.dev.conf
app/: .eslintcache  .eslintignore  .eslintrc  package-lock.json  package.json  tsconfig.json
app/public/: index.html
app/src/: App.tsx  cars.ts  consts.ts  cred.ts  index.tsx
backend/: __init__.py
backend/inference_core/: core.py  dataset_formatter.py  filter.py  intent_contract.py  prediction.py  prediction_stats.py  rankings.py  utils.py
backend/server/: paths.py  server.py  tasks.py
backend/utils/: hash.py
contract/: index.ts
datasets/: upload_datasets.py
datasets/Cluster Complex/: cluster_complex_v1.csv  cluster_complex_v2.csv  cluster_complex_v3.csv  cluster_complex_v4.csv
datasets/Cluster Simple/: cluster.yml  cluster_simple_v2.csv  cluster_simple_v3.csv  cluster_simple_v4.csv  cluster_simple_v6.csv
datasets/Covid/: covid.yml  june_2021.csv
datasets/Gapminder World/: gapminder_1990.csv  gapminder_2000.csv  gapminder_2010.csv  gapminder_2019.csv  gapminderworld.csv  gapminderworld.yml  gm_2014.csv
datasets/Linear Regression/: linear_regression copy.csv  linear_regression.csv
datasets/Linear Regression Complex/: linear_complex_v1.csv  linear_complex_v2.csv  linear_complex_v3.csv  linear_complex_v4.csv  linear_regression.yml
datasets/Linear Regression Simple/: linear_simple_v1.csv  linear_simple_v2.csv  linear_simple_v3.csv  linear_simple_v4.csv
datasets/Outliers/: outlier_v1.csv  outlier_v2.csv  outlier_v3.csv  outlier_v4.csv
datasets/cluster/: cluster.yml  cluster_short.csv
datasets/gapminder_world/: gapminderworld copy.csv  gapminderworld.yml
datasets/housing/: housing.yml
datasets/linear_regression/: linear_regression.yml
env/: common.env  dev.env
inference-core/: core.py  pyproject.toml
reapply-workflows/: pyproject.toml
reapply-workflows/demo/: Test.ipynb  Untitled.ipynb  agg.json  categorize 2.json  categorize.json  cluster_simple_v5.csv  dec_2020.csv  filter.json  gapminder_1980.csv  jan_2021.csv  label.json  selections.json  test.json
reapply-workflows/reapply_workflows/: __init__.py
reapply-workflows/reapply_workflows/compute/: changes.py  dbscan.py  get_members.py  isolationforest_outlier.py  kmeans_cluster.py  range.py  regression.py
reapply-workflows/reapply_workflows/inference/: inference.py  intent.py  interaction.py  prediction.py
reapply-workflows/reapply_workflows/inference/algorithms/: DBScanCluster.py  DBScanOutlier.py  IsolationForestOutlier.py  KMeansCluster.py  LinearRegression.py  PolynomialRegression.py  Skyline.py
reapply-workflows/reapply_workflows/inference_core/: inference.py
reapply-workflows/reapply_workflows/reapply/: Graph.py  Node.py  __init__.py  project.py  reapply.py  record.py  results.py  state.py  workflow.py
reapply-workflows/reapply_workflows/utils/: jaccard_similarity.py
reapply-workflows/src/reapply_workflows/: __init__.py
reapply-workflows/tests/: test_dbscan_outliers.py  test_reapply_workflows.py
server/: pyproject.toml  server.py  upload_datasets.py
server/routes/: datasetRoutes.py
server/server/: app.py
server/server/celery/: __init__.py  precompute_clusters.py  precompute_outliers.py  precompute_regression.py  precompute_skyline.py  tasks.py
server/server/db/models/: base.py  dataset_meta.py  dataset_record.py  intent.py  project.py  workflow.py
server/server/db/models/algorithm_outputs/: intent_base.py  outlier.py
server/server/graphql/: __init__.py
server/server/graphql/resolvers/: __init__.py  data_resolver.py  predictions_resolver.py  project_resolver.py
server/server/graphql/schemas/: base.graphql  dataset.graphql  prediction.graphql  project.graphql
server/server/routes/: __init__.py  compute_route.py  dataset_route.py  handle_exception.py  prediction_route.py  project_route.py
server/server/utils/: add_ids.py  hash.py  process_dataset.py
server/src/server/: __init__.py
static/js/: 2.f882d841.chunk.js  2.f882d841.chunk.js.LICENSE.txt  main.bbfde775.chunk.js  main.bbfde775.chunk.js.map  runtime-main.9c23b93b.js  (+1 more)
(+251 files in other folders)
