[tool.poetry]
name = "reapply-workflows"
version = "0.1.6"
description = ""
authors = ["Kiran Gadhave <kirangadhave2@gmail.com>"]
packages = [
    {include="backend"}
]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
numpy = "^1.19.4"
PyYAML = "^5.3.1"
scikit-learn = "^0.23.2"
pandas = "^1.1.4"
Flask-Cors = "^3.0.9"
SQLAlchemy = "1.3.20"
celery = "^5.0.5"
redis = "^3.5.3"
paretoset = "^1.2.0"
tqdm = "^4.56.2"
requests = "^2.25.1"
asciitree = "^0.3.3"
firebase-admin = "^4.5.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
