[tool.poetry]
name = "inference-core"
version = "0.1.0"
description = ""
authors = ["Kiran Gadhave <kirangadhave2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
numpy = "^1.19.4"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
