[tool.poetry]
name = "reapply-workflows"
version = "1.0.0"
description = ""
authors = ["Kiran Gadhave <kirangadhave2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.3"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
black = "^21.5b1"
flake8 = "^3.9.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
