[tool.poetry]
name = "reapply-workflows"
version = "1.1.1"
description = ""
authors = ["Kiran Gadhave <kirangadhave2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19.5"
pandas = "^1.1.5"
scikit-learn = "^0.22.2"
paretoset = "^1.2.0"
firebase-admin = "^4.4.0"
asciitree = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
black = "^21.5b1"
flake8 = "^3.9.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
