[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Kiran Gadhave <kirangadhave2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
reapply-workflows = {path = "../reapply-workflows/", develop = true}
Flask = "^2.0.1"
SQLAlchemy = "^1.4.15"
ariadne = "^0.13.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.8.6"
pyarrow = "^4.0.1"
PyYAML = "^5.4.1"
celery = "^5.1.0"
redis = "^3.5.3"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
black = "^21.5b1"
flake8 = "^3.9.2"
mypy = "^0.812"
watchdog = "^2.1.2"
argh = "^0.26.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
